...

const names: Record<string, string> = {
  'mine-incoming': 'Gigantamax Charizard',
  'theirs-incoming': 'Shiny Mewtwo',
  'mine-sent': 'Shiny Dialga',
  'theirs-sent': 'Shiny Remoraid',
  'mine-active': 'Shiny Bulbasaur',
  'theirs-active': 'Shiny Squirtle',
  'mine-completed': 'Shiny Ho-Oh',
  'theirs-completed': 'Shiny Suicune',
  'mine-closed': 'Shiny Metagross',
  'theirs-closed': 'Shiny Tyranitar',
  'mine-incoming-deny': 'Shiny Charizard',
...
